--- a/habit-tracker-infastructure/package.json
+++ b/habit-tracker-infastructure/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "fitness-activity-tracker-infastructure",
+  "name": "habit-tracker-infastructure",
   "version": "0.1.0",
   "bin": {
-    "fitness-activity-tracker-infastructure": "bin/fitness-activity-tracker-infastructure.js"
+    "habit-tracker-infastructure": "bin/habit-tracker-infastructure.js"
   },
   "scripts": {
     "build": "tsc",
@@ -13,15 +13,16 @@
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "20.14.9",
+    "aws-cdk": "2.148.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.5",
-    "aws-cdk": "2.148.0",
     "ts-node": "^10.9.2",
     "typescript": "~5.5.3"
   },
   "dependencies": {
     "aws-cdk-lib": "2.148.0",
     "constructs": "^10.0.0",
+    "dayjs": "^1.11.13",
     "source-map-support": "^0.5.21"
   }
 }
